tests/fixtures/batch-collections/invalid-files/another-valid.bru
meta {
  name: Another Valid Request
  type: http
  seq: 4
}

post {
  url: https://api.example.com/valid2
  body: none
  auth: none
}
